--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.22.10",
+    "@faker-js/faker": "^8.0.2",
     "babel-eslint": "^10.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -28,7 +29,9 @@
     "http": "^0.0.1-security",
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
+    "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
+    "moment": "^2.29.4",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.0"
   }
